--- a/reports/index.html
+++ b/reports/index.html
@@ -56,7 +56,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Jul 14, 2020 01:02:52 PM</span>
+                    <span class="badge badge-primary">Nov 27, 2023 07:32:22 pm</span>
                 </a>
             </li>
         </ul>
@@ -125,7 +125,7 @@
 						<div class="test-detail">
 							<p class="name">LaunchFlipkart</p>
 							<p class="duration text-sm">0h 0m 0s+0ms</p>
-							<span class="datetime">13:02:52 PM</span>
+							<span class="datetime">19:32:22 pm</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -133,8 +133,8 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">LaunchFlipkart</h5>
-									<span class='badge badge-success'>07.14.2020 13:02:52</span>
-									<span class='badge badge-danger'>07.14.2020 13:02:52</span>
+									<span class='badge badge-success'>11.27.2023 19:32:22</span>
+									<span class='badge badge-danger'>11.27.2023 19:32:22</span>
 									<span class='badge badge-default'>0h 0m 0s+0ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
@@ -155,7 +155,7 @@
 						<div class="test-detail">
 							<p class="name">LaunchFlipkart2</p>
 							<p class="duration text-sm">0h 0m 0s+0ms</p>
-							<span class="datetime">13:03:04 PM</span>
+							<span class="datetime">19:32:35 pm</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -163,8 +163,8 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">LaunchFlipkart2</h5>
-									<span class='badge badge-success'>07.14.2020 13:03:04</span>
-									<span class='badge badge-danger'>07.14.2020 13:03:04</span>
+									<span class='badge badge-success'>11.27.2023 19:32:35</span>
+									<span class='badge badge-danger'>11.27.2023 19:32:35</span>
 									<span class='badge badge-default'>0h 0m 0s+0ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
@@ -244,7 +244,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Start</h6>
-							<h4 class="font-weight-light mt-4">Jul 14, 2020 01:02:52 PM</h4>
+							<h4 class="font-weight-light mt-4">Nov 27, 2023 07:32:22 pm</h4>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -260,7 +260,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Duration</h6>
-							<h4 class="font-weight-light mt-4">0h 0m 24s+37ms</h4>
+							<h4 class="font-weight-light mt-4">0h 0m 29s+127ms</h4>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
